// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-no-events-icon Renders \`c-no-events-icon\` with custom props correctly 1`] = `
<c-simple-tooltip-stub
  content="No events received for 2,476 days 0 hrs 2 mins 3 secs by some of dependencies"
  max-width="1120"
  top="true"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate d-block material-icons theme--light secondary--text"
  >
    sync_problem
  </i>
</c-simple-tooltip-stub>
`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with default props correctly 1`] = `undefined`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with value correctly 1`] = `
<c-simple-tooltip-stub
  content="No events received for 2,476 days 0 hrs 2 mins 3 secs by some of dependencies"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate d-block material-icons theme--light error--text"
  >
    sync_problem
  </i>
</c-simple-tooltip-stub>
`;
